# myGames

./: CMakeLists.txt  README.md
lib/: tree.h
libs/PlayingCards/: CMakeLists.txt
libs/PlayingCards/include/: playingcards.h  sevens.h
libs/TicTacToe/: CMakeLists.txt
libs/TicTacToe/include/: tictactoe.h
libs/TicTacToe/src/: tictactoe.cpp
libs/Tree/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  tree.cpp  tree.h
src/tictactoe/: CMakeLists.txt  tictactoe.cpp  tictactoe.h
test/: CMakeLists.txt
